add Lecture Hour Statistics of Contractual Lecturer
